--- a/views/admin.ejs
+++ b/views/admin.ejs
@@ -156,7 +156,7 @@ If you are not a partner already clic on the partnership button below and fill t
 
 	<div class="coverForSubSections">
 		<p class="landingSectionClass" style="font-weight: bold;">Advert For Pastors message</p>
-		<form action="" id="landingSectionForm13">
+		  <form action="" id="landingSectionForm13">
 		   <p class="changePicture">First Picture</p>
 		   <input type="file" class="landingSection" id="firstfile">
 		   <p class="changePicture">Second Picture</p>
@@ -507,7 +507,6 @@ If you are not a partner already clic on the partnership button below and fill t
 		 	   	     event.preventDefault();
                var firstData = document.getElementById('visionBackgroundPicture').files[0].name;
                var secondData = document.getElementById('visionSte').value;
-               
                      $.ajax({
                           url: "/mamiupdate",
                           data: JSON.stringify({'message': 'visionarea',
@@ -535,9 +534,8 @@ If you are not a partner already clic on the partnership button below and fill t
                event.preventDefault();
                var firstData = document.getElementById('firstfile').files[0].name;
                var secondData = document.getElementById('secondfile').files[0].name;
-               var secondData = document.getElementById('thirdfile').files[0].name;
-               var secondData = document.getElementById('fouthfile').files[0].name;
-              
+               var thirdData = document.getElementById('thirdfile').files[0].name;
+               var fouthData = document.getElementById('fouthfile').files[0].name;
                      $.ajax({
                           url: "/mamiupdate",
                           data: JSON.stringify({'message': 'messageAdvertSection',
