--- a/views/homepage.ejs
+++ b/views/homepage.ejs
@@ -620,7 +620,7 @@
                                   processData: false,
                                   success: function (data) {
                                       console.log(data);
-                                      //changeContents(data);
+                                      //changeContents(data); so
                                   },
                                   error: function(data){
                                       alert("Cant Connect to Server! /n Something is wrong!");
